--- a/src/Components/ParentDashboard.js/css/ParentDashboard.css
+++ b/src/Components/ParentDashboard.js/css/ParentDashboard.css
@@ -9,7 +9,7 @@
 .studentInfo {
   display: flex;
   flex-direction: column;
-  height: 5rem;
+  height: 12rem;
   width: 100%;
   border: solid 1px black;
 }
@@ -19,4 +19,38 @@
   height: auto;
   width: 100%;
   border: solid 1px black;
+}
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  margin-top: 1rem;
+  position: absolute;
+  background-color: #f9f9f9;
+  margin-left: -6rem;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.userProfile {
+  border: 1px solid;
+
+  border-radius: 50%;
+  padding: 20px;
+}
+.parentHeaderDetails {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  height: 5rem;
+  width: 100%;
+  border: 1px solid black;
 }
