--- a/src/Components/ParentDashboard.js/css/ParentDashboard.css
+++ b/src/Components/ParentDashboard.js/css/ParentDashboard.css
@@ -54,3 +54,25 @@
   width: 100%;
   border: 1px solid black;
 }
+.termMarks {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+
+  width: 100%;
+  height: 25rem;
+  border: 1px solid black;
+}
+.headingSubjects {
+  display: flex;
+  flex-direction: column;
+}
+.approvalStatusParent {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  height: 5rem;
+  width: 100%;
+  border: 1px solid black;
+}
