--- a/src/Components/ParentDashboard.js/css/ParentDashboard.css
+++ b/src/Components/ParentDashboard.js/css/ParentDashboard.css
@@ -70,7 +70,7 @@
 .approvalStatusParent {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
   height: 5rem;
   width: 100%;
