--- a/src/Common Components/StudentInformation/css/studentInfo.css
+++ b/src/Common Components/StudentInformation/css/studentInfo.css
@@ -3,15 +3,12 @@
   height: 10rem;
   display: flex;
   flex-direction: column;
-  border: solid 1px black;
 }
 .resultOfStudent {
   width: 100%;
   height: 30rem;
   display: flex;
   flex-direction: column;
-  border: solid 1px black;
-  margin-top: 2rem;
 
   align-items: center;
 }
@@ -24,16 +21,17 @@ table {
 
 td,
 th {
-  border: 1px solid #dddddd;
+  border: 1px solid rgb(106, 175, 198);
   text-align: left;
   padding: 8px;
 }
 
 tr:nth-child(even) {
-  background-color: #dddddd;
 }
 .inputMarks {
   width: 5rem;
+  border: 2px rgb(106, 175, 198) solid;
+  color: rgb(106, 175, 198);
 }
 
 .btngroup {
@@ -42,4 +40,28 @@ tr:nth-child(even) {
   justify-content: center;
   align-items: center;
   margin-top: 1rem;
+}
+.studentInfoEdit {
+  background-image: url("../../../Img/bgTeacherDashBoard\ \(2\).jpg");
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: rgb(106, 175, 198);
+  border: 1px rgb(106, 175, 198) solid;
+}
+.selectTerm {
+  margin-top: -2rem;
+  color: rgb(106, 175, 198);
+  border: 1px rgb(106, 175, 198) solid;
+}
+h3,
+th,
+td {
+  color: rgb(106, 175, 198);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.markSheetBtn {
+  background-image: url("../../../Img/bgTeacherDashBoard\ \(2\).jpg");
+  color: rgb(106, 175, 198);
+  padding: 0.5rem;
+  border: 1px rgb(106, 175, 198) solid;
+  margin-left: 00.5rem;
 }
