--- a/src/Components/ParentDashboard.js/css/ParentDashboard.css
+++ b/src/Components/ParentDashboard.js/css/ParentDashboard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: 1px solid black;
+  border: 1px solid rgb(106, 175, 198);
   height: 5rem;
   width: 100%;
 }
@@ -11,38 +11,36 @@
   flex-direction: column;
   height: 12rem;
   width: 100%;
-  border: solid 1px black;
+  border: solid 1px rgb(106, 175, 198);
 }
 .markSheet {
   display: flex;
   flex-direction: column;
   height: auto;
   width: 100%;
-  border: solid 1px black;
+  border: solid 1px rgb(106, 175, 198);
 }
 .dropdown {
   position: relative;
   display: inline-block;
 }
 
-.dropdown-content {
+.dropdownContentParent {
   display: none;
-  margin-top: 1rem;
+  margin-top: -0.5rem;
   position: absolute;
   background-color: #f9f9f9;
-  margin-left: -6rem;
+  margin-left: -13rem;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
   padding: 12px 16px;
   z-index: 1;
 }
 
-.dropdown:hover .dropdown-content {
+.dropdown:hover .dropdownContentParent {
   display: block;
 }
 .userProfile {
-  border: 1px solid;
-
+  border: 2px rgb(106, 175, 198) solid;
   border-radius: 50%;
   padding: 20px;
 }
@@ -52,7 +50,7 @@
   justify-content: space-between;
   height: 5rem;
   width: 100%;
-  border: 1px solid black;
+  margin-top: 2rem;
 }
 .termMarks {
   display: flex;
@@ -61,7 +59,7 @@
 
   width: 100%;
   height: 25rem;
-  border: 1px solid black;
+  border: 1px solid rgb(106, 175, 198);
 }
 .headingSubjects {
   display: flex;
@@ -74,5 +72,49 @@
   align-items: center;
   height: 5rem;
   width: 100%;
-  border: 1px solid black;
+  border: 1px solid (106, 175, 198);
+}
+.termResult {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.result {
+  text-decoration: none;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: rgb(106, 175, 198);
+  font-size: 1.8rem;
+}
+.resultBtn {
+  height: 3rem;
+  width: 5rem;
+  background-image: url("../../../Img/bgTeacherDashBoard\ \(2\).jpg");
+  border: 2px rgb(106, 175, 198) solid;
+  color: rgb(106, 175, 198);
+  margin: 1rem;
+}
+
+.sideNaveParentDashboard {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.parentProfileIcon {
+  display: block;
+}
+.rightSideNav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 40rem;
+  width: 15rem;
+  border: 1px rgb(106, 175, 198) solid;
+}
+/**ye code mobile view me add karna hai */
+.mobileViewOfMArkSheet {
+  background-color: pink;
+  margin-top: 5rem;
+}
+@media screen and (max-width: 816px) {
 }
