--- a/src/Components/TeacherDashboard/css/TeacherDashBoard.css
+++ b/src/Components/TeacherDashboard/css/TeacherDashBoard.css
@@ -1,15 +1,83 @@
-.teacher-header {
+body {
+  background-image: url("../../../Img/bgTeacherDashBoard\ \(2\).jpg");
+}
+.teacherHeader {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  border: solid 1px black;
   height: 10rem;
   width: 100%;
+  color: rgb(106, 175, 198);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .bodyListTeacher {
   height: 20rem;
   width: 100%;
-  border: solid 1px black;
   margin-top: 20px;
+}
+
+/*Teacher Profile */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  margin-top: -0.6rem;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  padding: 12px 16px;
+  z-index: 1;
+  margin-left: -14rem;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+.dropdown:hover .triangle-up {
+  display: block;
+}
+.userProfile {
+  border: 1px solid;
+  border-radius: 50%;
+  padding: 20px;
+  color: rgb(106, 175, 198);
+}
+.teacherDetails {
+  color: rgb(106, 175, 198);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  margin: 1rem;
+}
+.search {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.studentListHeading {
+  color: rgb(106, 175, 198);
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.searchStudent {
+  height: 2rem;
+  width: 20rem;
+  margin: 1rem;
+  border: 1px rgb(106, 175, 198) solid;
+  border-radius: 9px;
+  display: block;
+}
+
+.triangle-up {
+  display: none;
+  width: 0;
+  height: 0;
+  margin-top: 1.5rem;
+  border-left: 35px solid transparent;
+  border-right: 36px solid transparent;
+  border-bottom: 28px solid white;
+}
+@media only screen and (max-width: 600px) {
 }
