--- a/src/Components/schoolAdmin/js/css/AdminProfile.css
+++ b/src/Components/schoolAdmin/js/css/AdminProfile.css
@@ -3,23 +3,36 @@
   display: inline-block;
 }
 
-.dropdown-content {
-  display: none;
-  margin-top: 1rem;
-  position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-  padding: 12px 16px;
-  z-index: 1;
+.dropdown:hover .dropdownContentForAdmin {
+  display: block;
 }
-
-.dropdown:hover .dropdown-content {
+.dropdown:hover .triangle-up {
   display: block;
 }
 .userProfile {
   border: 1px solid;
-
   border-radius: 50%;
-  padding: 20px;
+  padding: 2rem;
+}
+
+.triangle-up {
+  display: none;
+  width: 0;
+  height: 0;
+  border-left: 35px solid transparent;
+  border-right: 36px solid transparent;
+  border-bottom: 28px solid white;
+  margin-top: 1.5rem;
+}
+.dropdownContentForAdmin {
+  display: none;
+  margin-top: -1rem;
+  position: absolute;
+  background-color: white;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
+  padding: 12px 16px;
+  z-index: 1;
+  margin-left: -6rem;
+  color: rgb(106, 175, 198);
 }
