--- a/src/Model/UpdateTeacher/js/UpdateTeacher.css
+++ b/src/Model/UpdateTeacher/js/UpdateTeacher.css
@@ -1,11 +1,8 @@
-.addParentBtn {
-  height: 3rem;
-  width: 10rem;
+.updateTeacher {
   background-image: url("../../../Img/bgTeacherDashBoard\ \(2\).jpg");
   color: rgb(106, 175, 198);
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 1rem;
   border-style: none;
-  margin: 2rem;
   border: 1px rgb(106, 175, 198) solid;
 }
