--- a/src/Common Components/StudentList/css/StudentList.css
+++ b/src/Common Components/StudentList/css/StudentList.css
@@ -23,7 +23,7 @@ table {
 
 /*responsive*/
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
   .table thead {
     display: none;
   }
@@ -77,5 +77,11 @@ h3 {
 .listOfUser {
   display: flex;
   justify-content: center;
+  align-items: center;
+}
+.studentDataAddBtn {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
 }
