--- a/src/Components/Home/css/HomePage.css
+++ b/src/Components/Home/css/HomePage.css
@@ -9,7 +9,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
-  border: solid 1px black;
+  border: solid 1px rgb(106, 175, 198);
 }
 .intro {
   display: flex;
@@ -27,7 +27,7 @@
 .homePageImage {
   width: 100%;
   height: 30rem;
-  border: 1px solid black;
+  border: 1px solid rgb(106, 175, 198);
   position: absolute;
 }
 .loginIntro {
