--- a/src/Components/TeacherDashboard/css/TeacherDashBoard.css
+++ b/src/Components/TeacherDashboard/css/TeacherDashBoard.css
@@ -42,7 +42,7 @@ body {
   display: block;
 }
 .userProfile {
-  border: 1px solid;
+  border: 1px rgb(106, 175, 198) solid;
   border-radius: 50%;
   padding: 20px;
   color: rgb(106, 175, 198);
@@ -58,10 +58,12 @@ body {
   align-items: center;
 }
 .studentListHeading {
+  display: block;
   color: rgb(106, 175, 198);
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .searchStudent {
+  display: block;
   height: 2rem;
   width: 20rem;
   margin: 1rem;
@@ -79,5 +81,41 @@ body {
   border-right: 36px solid transparent;
   border-bottom: 28px solid white;
 }
-@media only screen and (max-width: 600px) {
+.mobileViewParentDashBoard {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .teacherHeader {
+    display: none;
+  }
+  .studentListHeading {
+    display: none;
+  }
+  .searchStudent {
+    display: none;
+  }
+  .mobileViewStudentListHeading {
+    display: block;
+    font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+    color: rgb(106, 175, 198);
+    font-size: 1rem;
+  }
+  .mobileViewSearchStudent {
+    display: block;
+    height: 2rem;
+    width: 10rem;
+    margin: 1rem;
+    border: 1px rgb(106, 175, 198) solid;
+    border-radius: 9px;
+    display: block;
+  }
+  .sideNaveParentDashboard {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .mobileViewParentDashBoard {
+    display: block;
+  }
 }
