--- a/src/Components/schoolAdmin/js/css/AdminProfile.css
+++ b/src/Components/schoolAdmin/js/css/AdminProfile.css
@@ -10,7 +10,7 @@
   display: block;
 }
 .userProfile {
-  border: 1px solid;
+  border: 1px rgb(106, 175, 198) solid;
   border-radius: 50%;
   padding: 2rem;
 }
