--- a/src/Model/AddStudent/css/AddStudent.css
+++ b/src/Model/AddStudent/css/AddStudent.css
@@ -1,4 +1,5 @@
 .addStudentBtn {
+  display: block;
   height: 3rem;
   width: 10rem;
   background-image: url("../../../Img/bgTeacherDashBoard\ \(2\).jpg");
@@ -37,4 +38,7 @@
 h5,
 p {
   color: rgb(106, 175, 198);
+}
+
+@media screen and (max-width: 600px) {
 }
