--- a/src/Components/schoolAdmin/js/css/schoolAdmin.css
+++ b/src/Components/schoolAdmin/js/css/schoolAdmin.css
@@ -4,6 +4,15 @@
   height: 5rem;
   width: 100%;
   justify-content: space-between;
+  border: 1px solid black;
+}
+.headerAdmin {
+  display: flex;
+  /* justify-content: space-around; */
+  height: 5rem;
+  width: 100%;
+  border: 1px solid black;
+  align-items: center;
 }
 
 .profile {
@@ -41,4 +50,54 @@ body {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: rgb(106, 175, 198);
   font-size: 2rem;
+}
+
+.dropbtnAdmin {
+  background-color: #4caf50;
+  color: white;
+  padding: 16px;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
+
+.adminDropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.schoolAdminDropDown {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.schoolAdminDropDown a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.schoolAdminDropDown a:hover {
+  background-color: #f1f1f1;
+}
+
+.adminDropdown:hover .schoolAdminDropDown {
+  display: block;
+}
+
+.adminDropdown:hover .dropbtn {
+  background-color: #3e8e41;
+}
+/*---------*/
+.schoolLogo {
+  height: 4rem;
+  width: 4rem;
+  border: 1px solid black;
+  /* background-image: url("../../../../Img/schoolLogo.jpg"); */
+  background-repeat: no-repeat;
 }
