--- a/src/Components/ParentDashboard.js/css/ParentDashboard.css
+++ b/src/Components/ParentDashboard.js/css/ParentDashboard.css
@@ -39,10 +39,14 @@
 .dropdown:hover .dropdownContentParent {
   display: block;
 }
-.userProfile {
-  border: 2px rgb(106, 175, 198) solid;
+.parentProfile {
+  border: 1px solid rgb(106, 175, 198);
+  background-color: rgb(106, 175, 198);
   border-radius: 50%;
-  padding: 20px;
+  padding: 0.5rem;
+}
+.profileIntro {
+  color: white;
 }
 .parentHeaderDetails {
   display: flex;
@@ -50,7 +54,7 @@
   justify-content: space-between;
   height: 5rem;
   width: 100%;
-  margin-top: 2rem;
+  align-items: center;
 }
 .termMarks {
   display: flex;
@@ -83,12 +87,13 @@
   text-decoration: none;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   color: rgb(106, 175, 198);
-  font-size: 1.8rem;
+  font-size: 1.5rem;
+  margin: 1rem;
 }
 .resultBtn {
   height: 3rem;
   width: 5rem;
-  background-image: url("../../../Img/bgTeacherDashBoard\ \(2\).jpg");
+
   border: 2px rgb(106, 175, 198) solid;
   color: rgb(106, 175, 198);
   margin: 1rem;
@@ -99,9 +104,7 @@
   flex-direction: row;
   justify-content: space-between;
 }
-.parentProfileIcon {
-  display: block;
-}
+
 .rightSideNav {
   display: flex;
   flex-direction: column;
@@ -117,4 +120,22 @@
   margin-top: 5rem;
 }
 @media screen and (max-width: 816px) {
+}
+/*-- new code -*/
+.parentProfileIcon {
+  display: flex;
+  flex-direction: row;
+  height: 5rem;
+  width: 100%;
+  border: 1px solid black;
+  align-items: center;
+  justify-content: space-between;
+}
+.parentDashboardLink {
+  display: flex;
+  flex-direction: row;
+  justify-content: start;
+  align-items: center;
+}
+.studentInfo {
 }
