--- a/src/Components/ParentDashboard.js/css/ParentDashboard.css
+++ b/src/Components/ParentDashboard.js/css/ParentDashboard.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  border: 1px solid rgb(106, 175, 198);
+  border: 1px solid black;
   height: 5rem;
   width: 100%;
 }
@@ -11,14 +11,14 @@
   flex-direction: column;
   height: 12rem;
   width: 100%;
-  border: solid 1px rgb(106, 175, 198);
+  border: 1px solid black;
 }
 .markSheet {
   display: flex;
   flex-direction: column;
   height: auto;
   width: 100%;
-  border: solid 1px rgb(106, 175, 198);
+  border: 1px solid black;
 }
 .dropdown {
   position: relative;
@@ -40,8 +40,8 @@
   display: block;
 }
 .parentProfile {
-  border: 1px solid rgb(106, 175, 198);
-  background-color: rgb(106, 175, 198);
+  border: 1px solid black;
+
   border-radius: 50%;
   padding: 0.5rem;
 }
@@ -63,7 +63,7 @@
 
   width: 100%;
   height: 25rem;
-  border: 1px solid rgb(106, 175, 198);
+  border: 1px solid black;
 }
 .headingSubjects {
   display: flex;
@@ -86,7 +86,7 @@
 .result {
   text-decoration: none;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: rgb(106, 175, 198);
+  color: black;
   font-size: 1.5rem;
   margin: 1rem;
 }
@@ -95,7 +95,7 @@
   width: 5rem;
 
   border: 2px rgb(106, 175, 198) solid;
-  color: rgb(106, 175, 198);
+  color: black;
   margin: 1rem;
 }
 
