--- a/src/Components/TeacherDashboard/css/TeacherDashBoard.css
+++ b/src/Components/TeacherDashboard/css/TeacherDashBoard.css
@@ -5,7 +5,7 @@
   align-items: center;
   height: 10rem;
   width: 100%;
-  color: rgb(106, 175, 198);
+  color: black;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .bodyListTeacher {
@@ -42,10 +42,10 @@
   border: 1px solid;
   border-radius: 50%;
   padding: 20px;
-  color: rgb(106, 175, 198);
+  color: black;
 }
 .teacherDetails {
-  color: rgb(106, 175, 198);
+  color: black;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin: 1rem;
 }
@@ -55,7 +55,7 @@
   align-items: center;
 }
 .studentListHeading {
-  color: rgb(106, 175, 198);
+  color: black;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .searchStudent {
