--- a/src/Components/schoolAdmin/js/css/AdminProfile.css
+++ b/src/Components/schoolAdmin/js/css/AdminProfile.css
@@ -1,38 +1,44 @@
-.dropdown {
+.dropdownAdmin {
   position: relative;
   display: inline-block;
 }
 
-.dropdown:hover .dropdownContentForAdmin {
+.dropdownAdmin:hover .dropdownContentForAdmin {
   display: block;
 }
-.dropdown:hover .triangle-up {
+.dropdownAdmin:hover .triangle-up {
   display: block;
 }
-.userProfile {
+.adminProfileHeading {
+  position: static;
   border: 1px solid;
   border-radius: 50%;
-  padding: 2rem;
+  padding: 0.8rem;
+  background-color: pink;
+}
+.profileHeading {
+  color: white;
 }
 
-.triangle-up {
+.triangleAdmin {
   display: none;
   width: 0;
   height: 0;
   border-left: 35px solid transparent;
   border-right: 36px solid transparent;
   border-bottom: 28px solid white;
-  margin-top: 1.5rem;
+
+  margin-left: -4rem;
 }
 .dropdownContentForAdmin {
   display: none;
-  margin-top: -1rem;
+  margin-top: 1rem;
   position: absolute;
   background-color: white;
   min-width: 160px;
   box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
   padding: 12px 16px;
   z-index: 1;
-  margin-left: -6rem;
-  color: rgb(106, 175, 198);
+  margin-left: -9rem;
+  color: black;
 }
