--- a/src/Model/AddTeacher/css/AddTeacher.css
+++ b/src/Model/AddTeacher/css/AddTeacher.css
@@ -2,7 +2,7 @@
   height: 3rem;
   width: 10rem;
 
-  color: rgb(106, 175, 198);
+  color: black;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 1rem;
   border-style: none;
