--- a/src/Model/UpdateTeacher/js/UpdateTeacher.css
+++ b/src/Model/UpdateTeacher/js/UpdateTeacher.css
@@ -1,5 +1,5 @@
 .updateTeacher {
-  color: rgb(106, 175, 198);
+  color: black;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   font-size: 1rem;
   border-style: none;
