--- a/src/Components/ParentDashboard.js/css/ParentDashboard.css
+++ b/src/Components/ParentDashboard.js/css/ParentDashboard.css
@@ -60,10 +60,9 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-
+  margin-top: 3rem;
   width: 100%;
   height: 25rem;
-  border: 1px solid black;
 }
 .headingSubjects {
   display: flex;
