--- a/src/Components/ParentDashboard.js/css/ParentDashboard.css
+++ b/src/Components/ParentDashboard.js/css/ParentDashboard.css
@@ -1,24 +1,9 @@
-.headerParent {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  border: 1px solid black;
-  height: 5rem;
-  width: 100%;
-}
-.studentInfo {
-  display: flex;
-  flex-direction: column;
-  height: 12rem;
-  width: 100%;
-  border: 1px solid black;
-}
 .markSheet {
   display: flex;
   flex-direction: column;
   height: auto;
   width: 100%;
-  border: 1px solid black;
+  border: 1px solid #c191d8;
 }
 .dropdown {
   position: relative;
@@ -27,10 +12,10 @@
 
 .dropdownContentParent {
   display: none;
-  margin-top: -0.5rem;
+  margin-top: 0.89rem;
   position: absolute;
-  background-color: #f9f9f9;
-  margin-left: -13rem;
+  background-color: #faf6fc;
+  margin-left: -15rem;
   min-width: 160px;
   padding: 12px 16px;
   z-index: 1;
@@ -39,14 +24,17 @@
 .dropdown:hover .dropdownContentParent {
   display: block;
 }
+.dropdown:hover .triangleParentDashBoard {
+  display: block;
+}
 .parentProfile {
-  border: 1px solid black;
+  border: 1px solid #faf6fc;
 
   border-radius: 50%;
   padding: 0.5rem;
 }
 .profileIntro {
-  color: white;
+  color: #faf6fc;
 }
 .parentHeaderDetails {
   display: flex;
@@ -85,48 +73,24 @@
 .result {
   text-decoration: none;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: black;
+  color: #faf6fc;
   font-size: 1.5rem;
   margin: 1rem;
 }
-.resultBtn {
-  height: 3rem;
-  width: 5rem;
-
-  border: 2px rgb(106, 175, 198) solid;
-  color: black;
-  margin: 1rem;
+.profileIntro:hover {
+  color: #deade2;
+}
+.result:hover {
+  color: #deade2;
 }
 
-.sideNaveParentDashboard {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.rightSideNav {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 40rem;
-  width: 15rem;
-  border: 1px rgb(106, 175, 198) solid;
-}
-/**ye code mobile view me add karna hai */
-.mobileViewOfMArkSheet {
-  background-color: pink;
-  margin-top: 5rem;
-}
-@media screen and (max-width: 816px) {
-}
 /*-- new code -*/
 .parentProfileIcon {
   display: flex;
   flex-direction: row;
-  height: 5rem;
+  height: 4rem;
   width: 100%;
-  border: 1px solid black;
+  background-color: #9848bf;
   align-items: center;
   justify-content: space-between;
 }
@@ -136,5 +100,60 @@
   justify-content: start;
   align-items: center;
 }
-.studentInfo {
+.schoolLogo {
+  background-image: url("../../../Img/schoolLogo.svg");
+  background-repeat: no-repeat;
+}
+.triangleParentDashBoard {
+  display: none;
+  position: absolute;
+  width: 0;
+  height: 0;
+  margin-top: 0rem;
+  border-left: 24px solid transparent;
+  border-right: 14px solid transparent;
+  border-bottom: 28px solid #faf6fc;
+}
+.parentData {
+  color: #c191d8;
+}
+.studentData {
+  display: flex;
+  flex-direction: column;
+  padding: 2.5rem;
+}
+.studentDataRow {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: #c191d8;
+}
+.message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.message h1 {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: #c191d8;
+}
+.detailsStudentResult {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: #a865c9;
+}
+.studentResultRow {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  color: #be8bd7;
+}
+.rejectBtn {
+  background-color: #c978d0;
+  border: none;
+  color: #f8ecf9;
+  height: 3rem;
+  width: 6rem;
+  padding: 0.5rem;
+  border-radius: 7px;
+  margin: 1.5rem;
+}
+.rejectBtn:hover {
+  background-color: #cf87d5;
+  color: #f1d9f3;
 }
