--- a/src/Model/AddStudent/css/AddStudent.css
+++ b/src/Model/AddStudent/css/AddStudent.css
@@ -1,13 +1,12 @@
 .addStudentBtn {
-  height: 3rem;
-  width: 10rem;
-
-  color: black;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 1rem;
-  border-style: none;
-  margin: 2rem;
-  border: 1px rgb(106, 175, 198) solid;
+  background-color: #c978d0;
+  border: none;
+  color: #f8ecf9;
+  height: 2.5rem;
+  width: 7rem;
+  padding: 0.2rem;
+  border-radius: 7px;
+  margin: 1.5rem;
 }
 .updateStudentBtn {
   color: black;
@@ -23,12 +22,14 @@
 }
 .inputStudentLabel {
   margin: 1rem;
-  color: black;
+  color: #b970c0;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .studentInput {
-  border: 1px rgb(106, 175, 198) solid;
-  color: black;
+  border: 1px #b970c0 solid;
+  color: #b970c0;
+  padding: 0.3rem;
+  border-radius: 9px;
 }
 .inputError {
   color: red;
