--- a/src/Common Components/StudentList/css/StudentList.css
+++ b/src/Common Components/StudentList/css/StudentList.css
@@ -5,16 +5,16 @@ table {
 .table td,
 .table th {
   padding: 12px 15px;
-  border: 1px solid black;
+  border: 1px solid #9848bf;
   text-align: center;
   font-size: 16px;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: black;
+  color: #9848bf;
 }
 
 .table th {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: black;
+  color: #9848bf;
 }
 
 .table tbody tr:nth-child(even) {
@@ -58,25 +58,34 @@ table {
 .inputSearchStudent {
   height: 3rem;
   width: 20rem;
-  border: 1px solid black;
+  border: 1px solid #9848bf;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: black;
+  color: #9848bf;
+  border-radius: 12px;
 }
 h3 {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: black;
+  color: #9848bf;
 }
 .deleteStudentBtn {
-  color: black;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  font-size: 1rem;
-  border-style: none;
-  border: 1px rgb(106, 175, 198) solid;
+  background-color: #c978d0;
+  border: none;
+  color: #f8ecf9;
+  height: 2rem;
+  width: 3.5rem;
+  border-radius: 7px;
+}
+.deleteStudentBtn:hover {
+  color: #d89ef6;
 }
 .listOfUser {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.listOfUser h3 {
+  color: #9848bf;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .StudentListHeading {
   display: flex;
@@ -89,4 +98,32 @@ h3 {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+}
+
+tr {
+  border-top: 2px solid #9848bf;
+}
+
+h2 {
+  color: #9848bf;
+}
+.teacherHeading {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 0.7rem;
+}
+.deleteStudentPop {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.deleteStudentPop h5 {
+  color: #9848bf;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+p {
+  color: #9848bf;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
