--- a/src/Components/schoolAdmin/js/css/schoolAdmin.css
+++ b/src/Components/schoolAdmin/js/css/schoolAdmin.css
@@ -38,8 +38,11 @@ h1 {
   text-decoration: none;
   margin: 1rem;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: black;
-  font-size: 1rem;
+  color: #faf6fc;
+  font-size: 1.5rem;
+}
+.studentListLink:hover {
+  color: #deade2;
 }
 
 .dropbtnAdmin {
@@ -108,7 +111,8 @@ h1 {
   justify-content: space-between;
   align-items: center;
   height: 5rem;
-  border: 1px solid black;
+  background-color: #9848bf;
+
   width: 100%;
 }
 .schoolAdminLinkSection {
