--- a/src/Common Components/StudentList/css/StudentList.css
+++ b/src/Common Components/StudentList/css/StudentList.css
@@ -127,3 +127,40 @@ p {
   color: #9848bf;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
+.pagination {
+  margin: 15px auto;
+  display: flex;
+  list-style: none;
+  outline: none;
+}
+.pagination > .active > a {
+  background-color: #9848bf;
+  border-color: #9848bf;
+  color: #fff;
+}
+.pagination > li > a {
+  border: 1px solid #9848bf;
+  padding: 5px 10px;
+  outline: none;
+  cursor: pointer;
+}
+.pagination > .active > a,
+.pagination > .active > span,
+.pagination > .active > a:hover,
+.pagination > .active > span:hover,
+.pagination > .active > a:focus,
+.pagination > .active > span:focus {
+  background-color: #9848bf;
+  border-color: #9848bf;
+  outline: none;
+}
+.pagination > li > a,
+.pagination > li > span {
+  color: #9848bf;
+}
+.pagination > li:first-child > a,
+.pagination > li:first-child > span,
+.pagination > li:last-child > a,
+.pagination > li:last-child > span {
+  border-radius: unset;
+}
