--- a/src/Components/TeacherDashboard/css/TeacherDashBoard.css
+++ b/src/Components/TeacherDashboard/css/TeacherDashBoard.css
@@ -3,10 +3,12 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 10rem;
+  height: 5rem;
   width: 100%;
-  color: black;
+  padding: 0.5rem;
+  color: white;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  background-color: #9848bf;
 }
 .bodyListTeacher {
   height: 20rem;
@@ -22,14 +24,14 @@
 
 .dropdown-content {
   display: none;
-  margin-top: -0.6rem;
+  margin-top: 1.2rem;
   position: absolute;
-  background-color: white;
+  background-color: #faf6fc;
   min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
   padding: 12px 16px;
   z-index: 1;
-  margin-left: -14rem;
+  margin-left: -20rem;
 }
 
 .dropdown:hover .dropdown-content {
@@ -42,10 +44,14 @@
   border: 1px solid;
   border-radius: 50%;
   padding: 20px;
-  color: black;
+  color: #faf6fc;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.userProfile:hover {
+  color: #efcfff;
 }
 .teacherDetails {
-  color: black;
+  color: #deade2;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   margin: 1rem;
 }
@@ -62,9 +68,10 @@
   height: 2rem;
   width: 20rem;
   margin: 1rem;
-  border: 1px rgb(106, 175, 198) solid;
+  border: 1px #9848bf solid;
   border-radius: 9px;
   display: block;
+  color: #9848bf;
 }
 
 .triangle-up {
@@ -75,6 +82,27 @@
   border-left: 35px solid transparent;
   border-right: 36px solid transparent;
   border-bottom: 28px solid white;
+}
+.logo {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+.logo h3 {
+  color: #faf6fc;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+.teacherSection {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.5rem;
+}
+.teacherSection h3 {
+  color: #9848bf;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 @media only screen and (max-width: 600px) {
 }
