--- a/src/Common Components/StudentInformation/css/studentInfo.css
+++ b/src/Common Components/StudentInformation/css/studentInfo.css
@@ -9,7 +9,6 @@
   height: 30rem;
   display: flex;
   flex-direction: column;
-
   align-items: center;
 }
 
@@ -21,17 +20,15 @@ table {
 
 td,
 th {
-  border: 1px solid black;
+  border: 1px solid #c978d0;
   text-align: left;
-  padding: 8px;
+  padding: 4px;
 }
 
-tr:nth-child(even) {
-}
 .inputMarks {
   width: 5rem;
-  border: 2px rgb(106, 175, 198) solid;
-  color: black;
+  border: 2px #c978d0 solid;
+  color: #c978d0;
 }
 
 .btngroup {
@@ -43,34 +40,32 @@ tr:nth-child(even) {
 }
 .studentInfoEdit {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
-  color: black;
-  border: 1px rgb(106, 175, 198) solid;
-}
-.studentInfoEdit {
-  background-color: #c978d0;
-  border: none;
-  color: #f8ecf9;
-  height: 2rem;
-  width: 3rem;
-  border-radius: 7px;
-}
-.studentInfoEdit:hover {
-  color: #d89ef6;
+  color: #c978d0;
+  border: 1px #c978d0 solid;
 }
 .selectTerm {
   margin-top: -2rem;
-  color: black;
-  border: 1px rgb(106, 175, 198) solid;
+  color: #c978d0;
+  border: 1px #c978d0 solid;
 }
 h3,
 th,
 td {
-  color: black;
+  color: #c978d0;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 .markSheetBtn {
-  color: black;
-  padding: 0.5rem;
-  border: 1px rgb(106, 175, 198) solid;
-  margin-left: 00.5rem;
+  background-color: #c978d0;
+  border-style: none;
+  color: white;
+  margin: 0.5rem;
+  width: 5rem;
+}
+.markSheetBtn:hover {
+  color: #f7b3fd;
+}
+.updateStudentInput {
+  border: 1px solid #c978d0;
+  color: #c978d0;
+  margin: 2px;
 }
