--- a/src/admin/components/css/adminProfile.css
+++ b/src/admin/components/css/adminProfile.css
@@ -15,6 +15,7 @@
   border-radius: 50%;
   padding: 0.8rem;
   background-color: #9848bf;
+  margin: 0.5rem;
 }
 .profileHeading {
   color: #faf6fc;
