--- a/src/teacher/css/teacherDashBoard.css
+++ b/src/teacher/css/teacherDashBoard.css
@@ -31,7 +31,7 @@
   box-shadow: 0px 8px 16px 0px rgb(0 0 0 / 20%);
   padding: 12px 16px;
   z-index: 1;
-  margin-left: -20rem;
+  margin-left: -17rem;
 }
 
 .dropdown:hover .dropdown-content {
@@ -104,5 +104,6 @@
   color: #9848bf;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
-@media only screen and (max-width: 600px) {
+.marksTable {
+  margin: 1rem;
 }
